# fastapi_d

./: README.rst  pyproject.toml  run  sql_app.db
fastapi_d/: main.py
tests/: test_fastapi_d.py
